--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 /[Pp]ackages/
-
+/[Rr]esults/
 #ignore ml-agents walker assets
 /[Aa]ssets/ML-Agents/
 /[Aa]ssets/ML-Agents.meta
